crates/ruff_python_formatter/tests/snapshots/format@fmt_skip__type_params.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/fmt_skip/type_params.py
---
## Input
```python
class TestTypeParam[ T ]: # fmt: skip
    pass

class TestTypeParam [ # trailing open paren comment
    # leading comment
    T # trailing type param comment
    # trailing type param own line comment
]: # fmt: skip
    pass

class TestTrailingComment4[
    T
]  ( # trailing arguments open parenthesis comment
    # leading argument comment
    A # trailing argument comment
    # trailing argument own line comment
): # fmt: skip
    pass

def test  [
    # comment
    A,

    # another

    B,
]  (): # fmt: skip
    ...

def test  [
    # comment
    A,

    # another

    B,
]  () -> str: # fmt: skip
    ...
```

## Output
```python
class TestTypeParam[ T ]:  # fmt: skip
    pass


class TestTypeParam [ # trailing open paren comment
    # leading comment
    T # trailing type param comment
    # trailing type param own line comment
]:  # fmt: skip
    pass


class TestTrailingComment4[
    T
]  ( # trailing arguments open parenthesis comment
    # leading argument comment
    A # trailing argument comment
    # trailing argument own line comment
):  # fmt: skip
    pass


def test  [
    # comment
    A,

    # another

    B,
]  ():  # fmt: skip
    ...


def test  [
    # comment
    A,

    # another

    B,
]  () -> str:  # fmt: skip
    ...
```


## Unsupported Syntax Errors
error[invalid-syntax]: Cannot use type parameter lists on Python 3.10 (syntax was added in Python 3.12)
 --> type_params.py:1:20
  |
1 | class TestTypeParam[ T ]:  # fmt: skip
  |                    ^^^^^
2 |     pass
  |

error[invalid-syntax]: Cannot use type parameter lists on Python 3.10 (syntax was added in Python 3.12)
  --> type_params.py:5:21
   |
 5 |   class TestTypeParam [ # trailing open paren comment
   |  _____________________^
 6 | |     # leading comment
 7 | |     T # trailing type param comment
 8 | |     # trailing type param own line comment
 9 | | ]:  # fmt: skip
   | |_^
10 |       pass
   |

error[invalid-syntax]: Cannot use type parameter lists on Python 3.10 (syntax was added in Python 3.12)
  --> type_params.py:13:27
   |
13 |   class TestTrailingComment4[
   |  ___________________________^
14 | |     T
15 | | ]  ( # trailing arguments open parenthesis comment
   | |_^
16 |       # leading argument comment
17 |       A # trailing argument comment
   |

error[invalid-syntax]: Cannot use type parameter lists on Python 3.10 (syntax was added in Python 3.12)
  --> type_params.py:23:11
   |
23 |   def test  [
   |  ___________^
24 | |     # comment
25 | |     A,
26 | |
27 | |     # another
28 | |
29 | |     B,
30 | | ]  ():  # fmt: skip
   | |_^
31 |       ...
   |

error[invalid-syntax]: Cannot use type parameter lists on Python 3.10 (syntax was added in Python 3.12)
  --> type_params.py:34:11
   |
34 |   def test  [
   |  ___________^
35 | |     # comment
36 | |     A,
37 | |
38 | |     # another
39 | |
40 | |     B,
41 | | ]  () -> str:  # fmt: skip
   | |_^
42 |       ...
   |
